--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "livePreview.defaultPreviewPath": "/scrimba/rpg-index.html"
+    "livePreview.defaultPreviewPath": "/scrimba/rpg-index.html",
+    "editor.tabCompletion": "on",
+    "files.autoSave": "afterDelay",
+    "editor.fontSize": 16,
+    "editor.fontFamily": "Consolas, 'Courier New', monospace, ubuntu",
+    "editor.suggest.preview": false
 }
